# tclambda

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  tox.ini
.githooks/: install.sh  pre-commit
.github/: dependabot.yml  main.workflow
.github/workflows/: push.yml
tclambda/: __init__.py  auto_functions.py  extras.py  function.py  handlers.py  messages.py
tests/: extras.py  test_handler.py  test_json_encoder_class.py
