[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "tclambda"
author = "Niels Lemmens"
author-email = "draso.odin@gmail.com"
classifiers = ["License :: OSI Approved :: MIT License"]
home-page = "https://github.com/trustcruit/tclambda"
requires-python = ">=3.7"
description-file = "README.md"

