[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "tclambda"
author = "Niels Lemmens"
author-email = "draso.odin@gmail.com"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
home-page = "https://github.com/trustcruit/tclambda"
requires-python = ">=3.7"
description-file = "README.md"

[tool.flit.metadata.requires-extra]
sentry = ["sentry-sdk >=0.8,<=0.9"]
